--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^2.1.0",
+    "framer-motion": "^11.3.24",
     "lodash": "^4.17.21",
     "next": "^14.2.5",
     "next-intl": "^3.4.2",
@@ -22,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
+    "react-tilt": "^1.0.2",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1"
   },
