--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
     "sass": "^1.69.7",
